--- a/src/KafkaSimpleAppender/KafkaSimpleAppender.csproj
+++ b/src/KafkaSimpleAppender/KafkaSimpleAppender.csproj
@@ -8,6 +8,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<Platform>x64</Platform>
 	<Platforms>x64</Platforms>
+	<ApplicationIcon>3171647_mail_send_friend_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="3171647_mail_send_friend_icon.ico" />
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
