Add MessageMaxBytes builder and config

--- a/src/KafkaSimpleAppender/appsettings.json
+++ b/src/KafkaSimpleAppender/appsettings.json
@@ -33,6 +33,7 @@
     "Username": "user123",
     "Password": "pwd123",
     "SecurityProtocol": "SaslPlaintext",
-    "SASLMechanism": "ScramSha512"
+    "SASLMechanism": "ScramSha512",
+    "MessageMaxBytes": 10000000
   }
 }
