Add FileLoaderConfiguration json config

--- a/src/KafkaSimpleAppender/appsettings.json
+++ b/src/KafkaSimpleAppender/appsettings.json
@@ -35,5 +35,9 @@
     "SecurityProtocol": "SaslPlaintext",
     "SASLMechanism": "ScramSha512",
     "MessageMaxBytes": 10000000
+  },
+  "FileLoaderConfiguration": {
+    "FileKeyField": "Key",
+    "FileValueField": "Value"
   }
 }
